# triangulax

./: .gitignore  README.md  environment.yml  pyproject.toml  settings.ini
.github/: copilot-instructions.md
_docs/: 00_triangulation_datastructure.html  01_test_simulations.md  robots.txt  search.json
_proc/: 00_triangulation_datastructure.html.md  00_triangulation_datastructure.ipynb  01_test_simulations.html.md  01_test_simulations.ipynb  index.html.md  index.ipynb  sidebar.yml
docs/: 00_triangulation_datastructure.md  00_trigonometry.html  00_trigonometry.md  01_test_simulations.html  01_triangular_meshes.html  01_triangular_meshes.md  01_triangulation_datastructure.html  01_triangulation_datastructure.md  02_coding_in_JAX_notes.html  02_coding_in_JAX_notes.md  02_test_simulations.html  02_test_simulations.md  03_area_perimeter_model.html  03_area_perimeter_model.md  03_halfedge_datastructure.html  03_halfedge_datastructure.md  04_linear_operators_on_meshes.html  04_linear_operators_on_meshes.md  04_topological_modifications.html  04_topological_modifications.md  05_adjacency_operators.html  05_adjacency_operators.md  05_example_simulation.html  05_example_simulation.md  05_geometry_and_linear_operators.html  05_geometry_and_linear_operators.md  06_example_simulation.html  06_example_simulation.md  06_geometric_quantities.html  06_geometric_quantities.md  06_self-propelled_Voronoi_model.html  06_self-propelled_Voronoi_model.md  07_linear_operators.html  07_linear_operators.md  07_self-propelled_Voronoi_model.html  07_self-propelled_Voronoi_model.md  08_example_simulation.html  08_example_simulation.md  09_self-propelled_Voronoi.html  09_self-propelled_Voronoi.md  (+7 more)
nbs/: 00_triangulation_datastructure.ipynb  00_trigonometry.ipynb  01_test_simulations.ipynb  01_triangular_meshes.ipynb  01_triangulation_datastructure.ipynb  02_coding_in_JAX_notes.ipynb  02_test_simulations.ipynb  03_area_perimeter_model.ipynb  03_halfedge_datastructure.ipynb  04_linear_operators_on_meshes.ipynb  04_topological_modifications.ipynb  05_adjacency_operators.ipynb  (+18 more)
(+121 files in other folders)
