[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "triangulax"
dynamic = ["version"]
description = "JAX-compatible triangular meshes and triangular-mesh-based simulations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "nikolas-claussen", email = "nhclaussen@gmail.com"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.urls]
Repository = "https://github.com/nikolas-claussen/triangulax"
Documentation = "https://nikolas-claussen.github.io/triangulax/"

[project.entry-points.nbdev]
triangulax = "triangulax._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "triangulax.__version__"}

[tool.setuptools.packages.find]
include = ["triangulax"]

[tool.nbdev]
